# hermes

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  VALIDATION-QUICK-START.md  dex-config.yaml  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum
.github/: copilot-instructions.md
.github/workflows/: PARALLEL-CI-README.md  e2e-python-tests.yml  lint.yml  parallel-ci.yml  pr-status-check.yml
cmd/hermes-indexer/: main.go
cmd/hermes-migrate/: main.go
cmd/hermes-notify/: main.go
configs/: config-ollama-example.hcl  indexer-worker-example.hcl  notifications-example.hcl
docs/: PRE_COMMIT_HOOKS.md
docs-demo/: .instructions.txt  COMPLETION-SUMMARY.md  DEMO-NARRATIVE.md  DEMO-README.md  DEMO-SCRIPT.sh  README.md  index.html
docs-demo/demo1/: README.md  example-document.md
docs-internal/: ALTERNATIVE_E2E_TESTING_APPROACHES.md  DISTRIBUTED_PROJECTS_ARCHITECTURE.md  DISTRIBUTED_PROJECTS_ROADMAP.md  DISTRIBUTED_PROJECT_IDENTITY.md  DOCID_PACKAGE_ANALYSIS.md  DOCID_PACKAGE_IMPLEMENTATION.md  EMBEDDED_WEB_ASSETS_STATUS.md  ENV_SETUP.md  INDEXER_AND_LOCAL_MODE_GUIDE.md  INDEXER_API_DESIGN_INDEX.md  INDEXER_API_DESIGN_SUMMARY.md  INDEXER_API_DIAGRAMS.md  INDEXER_API_IMPLEMENTATION_CHECKLIST.md  INDEXER_API_PROJECT_NORMALIZATION.md  INDEXER_IMPLEMENTATION_GUIDE.md  INDEXER_PHASE1_COMPLETE.md  INDEXER_REFACTOR_IMPLEMENTATION.md  INDEXER_REFACTOR_PLAN.md  README-google-workspace.md  README-indexer.md  README-ollama.md  SETUP_WIZARD_GUIDE.md  SETUP_WIZARD_OLLAMA.md  SIMPLIFIED_MODE_DEMO.md  SQLITE_DRIVER_CONFLICT.md  STATELESS_INDEXER_ARCHITECTURE.md  UUID_MIGRATION_GUIDE.md  VALIDATION_AUTO_MIGRATION.md
docs-internal/adr/: ADR-GTS-TEMPLATE-COMPILATION-ISSUE.md
docs-internal/ember-development-guide/: 06-build-development.md  README.md
docs-internal/memo/: AI_AGENT_CAPABILITIES_AND_LIMITATIONS.md  HUMAN_ENABLEMENT_PATTERNS.md  MEMO-017-dev-quickref.md  MEMO-090-db-migration-refactoring.md  MEMO-091-document-revisions-migration.md  MEMO-092-e2e-testing-summary.md  MEMO-094-hcl-projects-rationale.md  MEMO-095-instance-identity.md  MEMO-097-projectconfig-api.md  MEMO-098-projectconfig-integration.md  MEMO-099-projectconfig-summary.md  MEMO-101-uuid-integration.md
docs-internal/memos/: 2025-11-15-rfc-088-week1-2-complete.md  2025-11-15-rfc-088-week2-3-complete.md  2025-11-15-rfc-implementation-tracker.md
docs-internal/rfc/: LOCAL_DEVELOPER_MODE_WITH_CENTRAL_HERMES.md  README.md  RFC-082-document-identification-system.md  RFC-083-ARCHITECTURE.md  RFC-083-IMPLEMENTATION-CHECKLIST.md  RFC-083-SUMMARY.md  RFC-083-simplified-local-mode.md  RFC-084-api-provider-architecture.md  RFC-084-provider-interface-refactoring.md  RFC-085-APPENDIX-PERMISSIONS.md  RFC-085-api-provider-remote-delegation.md  RFC-086-appendix-permissions-model.md  RFC-086-authentication-bearer-tokens.md  RFC-087-ADDENDUM.md  RFC-087-BACKENDS.md  RFC-087-DOCKER-COMPOSE.md  RFC-087-IMPLEMENTATION-STATUS.md  RFC-087-MESSAGE-SCHEMA.md  RFC-087-NOTIFICATION-BACKEND.md  RFC-087-TEMPLATE-SCHEME.md  RFC-088-ARCHITECTURE-REFACTORING.md  RFC-088-IMPLEMENTATION-SUMMARY.md  RFC-088-PERFORMANCE-BENCHMARKS.md  RFC-088-PRODUCTION-DEPLOYMENT.md  RFC-088-QUERY-OPTIMIZATION-ANALYSIS.md  RFC-088-RELEASE-NOTES.md  RFC-088-TESTING-STATUS.md  RFC-088-WEEK-10-FINAL-POLISH-PROGRESS.md  RFC-088-WEEK-4-5-COMPLETION-SUMMARY.md  RFC-088-WEEK-5-6-SUMMARY.md  RFC-088-WEEK-7-COMPLETION-SUMMARY.md  RFC-088-WEEK-7-POLISH-PROGRESS.md  RFC-088-WEEK-8-OPTIMIZATION-PROGRESS.md  RFC-088-WEEK-9-DOCUMENTATION-PROGRESS.md  RFC-088-event-driven-indexer.md  RFC-089-IMPLEMENTATION-SUMMARY.md  (+5 more)
python-client/: .gitignore  COMMIT_INFO.md  COMMIT_MESSAGE_TESTS.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PYTHON_VERSION_ISSUE.md  QUICKSTART.md  README.md  TESTING_AND_VALIDATION_SUMMARY.md  pyproject.toml  python-client.md  setup-venv.sh
python-client/examples/: async_usage.py  basic_usage.py  frontmatter_usage.py  integration_test.py
python-client/scripts/: demo.sh  pre-commit.sh  setup.sh
python-client/src/hc_hermes/: __init__.py  cli.py  client.py  client_async.py  config.py  exceptions.py  http_client.py  models.py  utils.py
python-client/tests/: conftest.py  test_client.py  test_client_async.py  test_config.py  test_http_client.py  test_models.py  test_utils.py
scripts/: README.md  check-commit-msg.sh  check-complexity.sh  configure-ollama.sh  validate-go-syntax.sh  validate-production-deployment.sh
testing/: COMPREHENSIVE_E2E_TEST_DESIGN.md  EDGE_SYNC_AUTH_TESTING.md  GO-MIGRATION-COMPLETE.md  GO-TESTING-MIGRATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION-E2E-QUICKSTART.md  MIGRATION-E2E-TESTING.md  MIGRATION-TEST-SUMMARY.md  MIGRATION-TESTING-GO.md  Makefile  QUICK_REFERENCE.md  README-MIGRATION-TESTS.md  README.md  RFC-089-TESTING-GUIDE.md  SHELL-SCRIPTS-REMOVED.md  STATUS.md  STRONG-SIGNAL-VALIDATION.md  VALIDATION-SUMMARY.md  config-central.hcl  config-edge.hcl  config-local-native.hcl  config-minimal-native.hcl  config-profiles.hcl  config-rfc089-migration.hcl  config.hcl  create-edge-token.sh  dex-config.yaml  docker-compose.yml  indexer-worker.hcl  notifier-audit.hcl  notifier-mail.hcl  notifier-ntfy.hcl  phase4-integration-test.sh  projects.hcl  projects.json  projects.schema.json  test-comprehensive-e2e.sh  test-document.json  test-edge-sync-api.sh  test-edge-sync-auth.sh  (+4 more)
testing/python/: .gitignore  CLI_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  OAUTH_AUTOMATION_GUIDE.md  QUICKSTART.md  README.md  TEST_COVERAGE_AND_IMPROVEMENTS.md  UNIFIED_CLI_COMPLETE.md  __init__.py  auth_helper.py  config.py  generators.py  hermes_test.py  pyproject.toml  scenario_automated.py  scenario_basic.py  scenario_long_running.py  scenario_migration.py  scenario_multi_author.py  scenarios.py  seed.py  seeding.py  setup.sh  validation.py
testing/python/tests/: conftest.py  test_generators.py  test_scenarios.py  test_seeding.py
web/: .babelrc.js  Dockerfile  babel.config.js  ember-cli-build.js  package-audit.sh  package.json  tsconfig.json  web.go
(+632 files in other folders)
