[project]
name = "hermes-testing"
version = "0.1.0"
description = "Distributed testing framework for Hermes document management system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MPL-2.0" }
authors = [
    { name = "HashiCorp Labs", email = "hermes@hashicorp.com" }
]

dependencies = [
    "hc-hermes",  # Will use ../python-client in dev
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",  # For beautiful CLI output
    "tenacity>=8.0",  # For retry logic
    "httpx>=0.27",  # For OAuth client credentials flow
]

[project.scripts]
hermes-test = "hermes_test:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

google = [
    "google-auth>=2.0",  # For Google service account authentication
]

# Explicitly declare modules (flat layout)
[tool.setuptools]
py-modules = [
    "config",
    "generators",
    "seeding",
    "validation",
    "scenarios",
    "seed",
    "scenario_basic",
    "scenario_migration",
    "scenario_multi_author",
    "scenario_automated",
    "scenario_long_running",
    "auth_helper",
    "hermes_test",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "basic: Basic scenario tests",
    "migration: Migration scenario tests",
    "conflict: Conflict detection tests",
    "multi_author: Multi-author scenario tests",
    "integration: Integration tests requiring running Hermes",
    "slow: Slow tests that may take several minutes",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E402", "UP045"]  # E402: Module level import not at top (sys.path manipulation), UP045: Use X|None (Python 3.10+ syntax)

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
